--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,7 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .loader {
@@ -196,6 +197,7 @@ code {
   width: 30px;
   height: 30px;
   animation: spin 2s linear infinite;
+  z-index: 101;
 }
 
 .navigation {
@@ -231,6 +233,20 @@ code {
   cursor: pointer;
 }
 
+.balanceNavContainer {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+}
+
+.balanceNav {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.3em;
+  color: #FFFFFF;
+}
+
 .avatarNav {
   width: 45px;
   height: 45px;
@@ -244,6 +260,11 @@ code {
   font-weight: 500;
   font-size: 1.2em;
   color: #FFFFFF;
+}
+
+.exitIconNav {
+  color: #FFFFFF;
+  font-size: 1.3em;
 }
 
 .loginBtn {
@@ -488,6 +509,8 @@ code {
   position: fixed;
   background-color: #111827;
   background-size: cover;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
@@ -697,6 +720,10 @@ code {
 
 .menuProp {
   color: #FFFFFF;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3px;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 1em;
@@ -1031,7 +1058,7 @@ code {
 }
 
 .gamesListSpace::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 .gamesListSpace::-webkit-scrollbar-thumb {
@@ -1279,7 +1306,7 @@ code {
 }
 
 .faq {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -1288,11 +1315,10 @@ code {
   gap: 10px;
   row-gap: 35px;
   background-color: #111827;
-  margin-top: 10vh;
   margin-left: 17.5%;
   width: 65%;
   height: 40%;
-  bottom: -40%;
+  bottom: -45%;
 }
 
 .logoContainer {
@@ -1526,6 +1552,40 @@ code {
   }
 }
 
+.btnStream {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 3px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+  color: #FFFFFF;
+  background-color: #940000;
+  margin-left: 7%;
+}
+
+.btnStream:hover {
+  cursor: pointer;
+  background-color: #940040;
+}
+
+.btnStream:active {
+  transform: translate(0.3px);
+}
+
+.streamNotification {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+}
+
 .sendContainer {
   position: relative;
   background-color: #111827;
@@ -1643,6 +1703,19 @@ code {
   width: 0;
 }
 
+.imgChatContainer {
+  position: relative;
+  height: 28px;
+  width: 28px;
+}
+
+.imgChatContainer:hover{
+  cursor: pointer;
+  .imageMessage{
+    border: solid 2px #e0e0e0;
+  }
+}
+
 .imageMessage {
   position: sticky;
   top: 0;
@@ -1650,6 +1723,25 @@ code {
   width: 28px;
   border: solid 2px #FFFFFF;
   border-radius: 50%;
+}
+
+.chatLvl {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 60%;
+  left: 70%;
+  border: solid 1px #FFFFFF;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  z-index: 1;
+  background-color: #1b2430;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.5em;
+  color: #FFFFFF;
 }
 
 @media (max-width: 1200px) {
@@ -1685,7 +1777,7 @@ code {
   flex-basis: 80%;
   min-height: 20px;
   height: fit-content;
-  background-color: #b3b3b3;
+  background-color: #1d2a42;
   border-radius: 0 10px 0 10px;
   padding: 3px;
   overflow-y: auto;
@@ -1765,7 +1857,7 @@ code {
   box-sizing: border-box;
   transition: all 0.3s ease-out;
   overflow-y: auto;
-  max-height: 100vh;
+  max-height: 500px;
 }
 
 @media (max-width: 768px) {
@@ -1792,6 +1884,23 @@ code {
   gap: 10px;
 }
 
+.avatarContainerLobby {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  align-items: center;
+}
+
+.coinSidePlayer {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 0;
+  border-radius: 50%;
+  right: 0;
+}
+
 .lobbyAvatar {
   height: 90px;
   width: 90px;
@@ -1800,7 +1909,7 @@ code {
   background-color: #292a33;
   -webkit-box-shadow: 0 0 25px 5px rgba(237, 237, 237, 0.35);
   -moz-box-shadow: 0 0 25px 5px rgba(237, 237, 237, 0.35);
-  box-shadow: 0 0 25px 5px rgba(237, 237, 237, 0.35);
+  box-shadow: 0 0 25px 5px rgba(5, 5, 5, 0.85);
 }
 
 .lobbyAvatar2 {
@@ -1936,6 +2045,7 @@ code {
   overflow-y: auto;
   list-style: none;
   padding: 1px 5px;
+  max-height: 150px;
   flex-basis: 40%;
 }
 
@@ -2035,8 +2145,835 @@ code {
   }
 }
 
+#coin-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  cursor: pointer;
+  transition: transform 1s ease-in;
+  transform-style: preserve-3d;
+}
 
+@media (max-width: 1200px) {
+  #coin-container {
+    width: 130px;
+    height: 130px;
+  }
+}
 
+@media (max-width: 992px) {
+  #coin-container {
+    width: 90px;
+    height: 90px;
+  }
+}
+
+@media (max-width: 768px) {
+  .modalWindowGame {
+    justify-content: center;
+    gap: 10px;
+  }
+  #coin-container {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+#coin-container div {
+  position: absolute;
+  backface-visibility: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  /*box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3), 0 12px 20px -10px rgba(0, 0, 0, 0.4);*/
+}
+
+@media (max-width: 768px) {
+  #coin-container div {
+    bottom: 300px;
+  }
+}
+
+.side-a {
+  background-image: url("./imgs/tails.png");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  z-index: 100;
+}
+
+.side-b {
+  background-image: url("./imgs/heads.png");
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  transform: rotateY(-180deg);
+}
+
+#coin-container.heads {
+  animation: flipHeads 3s ease-out forwards;
+}
+
+#coin-container.tails {
+  animation: flipTails 3s ease-out forwards;
+}
+
+@keyframes flipHeads {
+  from { transform: rotateY(0); }
+  to { transform: rotateY(1800deg); }
+}
+
+@keyframes flipTails {
+  from { transform: rotateY(0); }
+  to { transform: rotateY(1980deg); }
+}
+
+.profilePage {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow-y: auto;
+}
+
+.profileContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  background-color: #212C3B;
+  border-radius: 10px;
+  justify-content: center;
+  gap: 0;
+  width: 65vw;
+  height: 80vh;
+  margin-top: 14vh;
+  margin-left: 17.5%;
+  padding: 3px;
+}
+
+@media (max-width: 768px) {
+  .profileContainer {
+    width: 95vw;
+    margin-left: 2.5vw;
+  }
+}
+
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5%;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  flex-basis: 45%;
+  height: 95%;
+  padding: 5px;
+}
+
+.innerInfoContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 10px;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 0 5px;
+}
+
+.avatarProfile {
+  width: 55px;
+  height: 55px;
+  border: solid 2px #6B7280;
+  border-radius: 50%;
+}
+
+.innerData {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 100%;
+}
+
+.usernameProfile {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.25em;
+  color: #FFFFFF;
+}
+
+.registerDate {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.95em;
+  color: #6B7280;
+}
+
+.userID {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.95em;
+  color: #6B7280;
+}
+
+.usernameProfile, .registerDate, .userID {
+  flex-basis: 100%;
+}
+
+.outerInfoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  row-gap: 10px;
+  width: 100%;
+  height: 100%;
+  flex-wrap: nowrap;
+}
+
+.outerInfo {
+  font-family: 'Questrial', sans-serif;
+  font-weight: 500;
+  font-size: 1.5em;
+  color: #4B5563;
+}
+
+.outerInfoNum {
+  font-family: 'Questrial', sans-serif;
+  font-size: 1.9em;
+  color: #FFFFFF;
+  margin-bottom: 40px;
+}
+
+.marketPage {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow-y: auto;
+}
+
+.marketContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  background-color: #212C3B;
+  border-radius: 10px;
+  row-gap: 10px;
+  width: 65vw;
+  height: 85vh;
+  max-height: 85vh;
+  margin-top: 14vh;
+  margin-left: 17.5%;
+}
+
+.marketListSpace {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 5px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  flex-basis: 100%;
+  overflow-y: auto;
+  margin: 0;
+}
+
+.marketListSpace::-webkit-scrollbar {
+  width: 4px;
+}
+
+.marketListSpace::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.marketListSpace::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.marketListSpace::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.marketItemContainer {
+  background-color: #192432;
+  border-radius: 8px;
+  height: 200px;
+  flex-basis: calc(20% - 10px);
+  display: flex;
+  row-gap: 1px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.marketItemImg {
+  width: 60%;
+  height: 60%;
+  border: none;
+  align-self: center;
+}
+
+.marketItemClass {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1em;
+  color: #6B7280;
+  margin-left: 12%;
+}
+
+.marketItemName {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.1em;
+  color: #FFFFFF;
+  margin-left: 12%;
+}
+
+.marketItemCostContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 12%;
+  gap: 5px;
+}
+
+.marketCoinImg {
+  width: 13px;
+  height: 13px;
+}
+
+.marketItemCost {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  color: #FFFFFF;
+}
+
+.marketItemsValue {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.05em;
+  color: #FFFFFF;
+  gap: 9px;
+}
+
+.marketUpperPanel {
+  margin: 15px 10px 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 100%;
+}
+
+.rightUpperMarket {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.searchContainerMarket {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #192432;
+  height: 23px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.searchMarket {
+  border: none;
+  background-color: #192432;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.9em;
+  color: #FFFFFF;
+}
+
+.searchMarket:focus {
+  outline: none;
+}
+
+.btnBuy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #FF2D2D;
+  color: #FFFFFF;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 0.8em;
+  border: none;
+  border-radius: 3px;
+  height: 25px;
+  width: 40px;
+  box-shadow: 0 2px 16px 0 #FF2D2D;
+
+}
+
+.btnBuy:hover {
+  cursor: pointer;
+}
+
+.btnBuy:active {
+  transform: translate(0.5px);
+}
+
+.affiliateInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  background-color: #1b2430;
+  height: 95%;
+  padding-left: 5px;
+  flex-basis: 55%;
+  border-radius: 9px;
+}
+
+.affiliatedInfo {
+  font-family: 'Questrial', sans-serif;
+  font-weight: 500;
+  font-size: 1.4em;
+  color: #4B5563;
+}
+
+.affiliatedInfoNum {
+  font-family: 'Questrial', sans-serif;
+  font-size: 1.5em;
+  color: #FFFFFF;
+  margin-bottom: 40px;
+}
+
+.codeContainer {
+  display: flex;
+  height: 20px;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 5px;
+  align-items: center;
+  .affiliatedInfoNum {
+    margin: 0;
+  }
+}
+
+.afCode {
+  border: none;
+  height: 30px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.95em;
+  color: #FFFFFF;
+  background-color:  #212C3B;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.afCode:focus {
+  outline: none;
+}
+
+.btnSave {
+  font-size: 1.5em;
+  color: #26304f;
+}
+
+.btnSave:hover {
+  cursor: pointer;
+}
+
+.btnSave:active {
+  font-size: 1.4em;
+  transform: translate(0.3px);
+}
+
+.btnSave:disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  transform: none;
+}
+
+.btnCancel {
+  font-size: 1.6em;
+  color: #26304f;
+}
+
+.btnCancel:hover {
+  cursor: pointer;
+}
+
+.btnCancel:active {
+  font-size: 1.45em;
+  transform: translate(0.3px);
+}
+
+.btnPen {
+  font-size: 1.45em;
+  color: #26304f;
+}
+
+.btnPen:hover {
+  cursor: pointer;
+}
+
+.btnPen:active {
+  font-size: 1.35em;
+  transform: translate(0.3px);
+}
+
+.rewardsPage {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow-y: auto;
+}
+
+.rewardsContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #212C3B;
+  border-radius: 10px;
+  justify-content: center;
+  width: 65vw;
+  height: 80vh;
+  margin-top: 14vh;
+  margin-left: 17.5%;
+  padding: 3px;
+}
+
+.rewardDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  gap: 25px;
+}
+
+.nextRew {
+  font-family: 'Raleway', sans-serif;
+  font-size: 2em;
+  color: #FFFFFF;
+}
+
+.rewardImg {
+  width: 150px;
+  height: 150px;
+  border: solid 1px #940000;
+  border-radius: 50%;
+  padding: 3px;
+  box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.5);
+}
+
+.rewardName {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.4em;
+  color: #FFFFFF;
+}
+
+.progressBackground {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 12px;
+  background-color: #f2f2f2;
+  border-radius: 50px;
+  padding: 0;
+}
+
+.progressBar {
+  background-color: rgba(189, 0, 0, 1);
+  height: 100%;
+  border-radius: 50px 0 0 50px;
+  margin: 0;
+  box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.5);
+}
+
+.progressInfo {
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2em;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.expInfo {
+  position: absolute;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.3em;
+  color: #FFFFFF;
+  top: 3%;
+  left: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3px;
+  align-items: flex-start;
+}
+
+.modalPlayer {
+  position: relative;
+  width: 40%;
+  min-width: 300px;
+  max-width: 600px;
+  background-color: #212C3B;
+  border-radius: 10px;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: all 0.3s ease-out;
+  overflow-y: auto;
+  max-height: 100vh;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.profileImageContainer {
+  position: relative;
+  display: flex;
+  max-width: 70px;
+}
+
+.profileLvl {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+  width: 1.1em;
+  height: 1.1em;
+  color: #FFFFFF;
+  padding: 2px;
+  border: solid 1px #FFFFFF;
+  border-radius: 50%;
+  background-color: #1b2430;
+  top: 70%;
+  left: 70%;
+}
+
+.profileInfoPlayer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5%;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 95%;
+  padding: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  color: #FFFFFF;
+}
+
+.userInfoModal {
+  display: flex;
+  width: 70%;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1em;
+  align-items: center;
+  font-family: 'Righteous', sans-serif;
+  font-size: 1.4em;
+  color: #FFFFFF;
+}
+
+.streamNotification {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #940000;
+  width: 87%;
+  height: 40px;
+  align-self: center;
+  border-radius: 5px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.1em;
+  color: #ededed;
+}
+
+.streamBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+  color: #FFFFFF;
+  background-color: #192432;
+}
+
+.streamBtn:hover {
+  cursor: pointer;
+}
+
+.streamBtn:active {
+  transform: translate(0.3px);
+}
+
+.weeklyRacePage {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow-y: auto;
+}
+
+.weeklyRaceContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-color: #212C3B;
+  border-radius: 10px;
+  justify-content: center;
+  width: 65vw;
+  height: 80vh;
+  margin-top: 14vh;
+  margin-left: 17.5%;
+  padding: 3px;
+  gap: 20px;
+}
+
+.leadersText {
+  font-family: 'Questrial', sans-serif;
+  font-size: 2.4em;
+  color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.leadersSpace {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 95%;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  list-style: none;
+  border-radius: 8px;
+  flex-basis: 85%;
+  padding: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.leadersSpace::-webkit-scrollbar {
+  width: 8px;
+}
+
+.leadersSpace::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.leadersSpace::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.leadersSpace::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.leaderContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3px;
+  width: 100%;
+  min-height: 85px;
+  border-radius: 5px;
+  background-color: rgba(41, 43, 53, 1);
+  font-family: 'Questrial', sans-serif;
+  font-size: 1.4em;
+  color: rgba(255, 255, 255, 0.85);
+  box-shadow: 0 2px 4px rgba(148, 0, 0, 0.4)
+}
+
+.leaderImg {
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  border: solid 1px rgba(255, 255, 255, 0.3);
+}
+
+/*.leaderUsername {*/
+/*  max-width: 100px;*/
+/*  white-space: nowrap;*/
+/*  overflow: hidden;*/
+/*  text-overflow: ellipsis;*/
+/*}*/
+
+.leaderUserInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 7px;
+  flex-basis: 25%;
+}
+
+.leaderTotal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 5px;
+}
+
+.totalUpper {
+  font-size: 0.8em;
+  color: rgba(255, 255, 255, 0.3);
+}
 
 
 
