--- a/src/index.css
+++ b/src/index.css
@@ -1711,9 +1711,6 @@ code {
 
 .imgChatContainer:hover{
   cursor: pointer;
-  .imageMessage{
-    border: solid 2px #e0e0e0;
-  }
 }
 
 .imageMessage {
@@ -1721,7 +1718,6 @@ code {
   top: 0;
   height: 28px;
   width: 28px;
-  border: solid 2px #FFFFFF;
   border-radius: 50%;
 }
 
@@ -1857,6 +1853,8 @@ code {
   box-sizing: border-box;
   transition: all 0.3s ease-out;
   overflow-y: auto;
+  overflow-x: hidden;
+  row-gap: 10px;
   max-height: 500px;
 }
 
@@ -2975,6 +2973,164 @@ code {
   color: rgba(255, 255, 255, 0.3);
 }
 
+.addItems {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 350px;
+  max-height: 400px;
+  border-radius: 8px;
+  background-color: rgba(33, 30, 23, 0.5);
+  padding: 5px;
+}
+
+.createWorth {
+  position: absolute;
+  left: 5px;
+  top: 3px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  font-size: 1.4em;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.95);
+}
+
+.itemsAddContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 7px;
+  row-gap: 7px;
+  max-height: 80%;
+  width: 100%;
+  list-style: none;
+  margin-top: 5%;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.itemsAddContainer::-webkit-scrollbar {
+  width: 8px;
+}
+
+.itemsAddContainer::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.itemsAddContainer::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.itemsAddContainer::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.addItemContainer {
+  background-color: #192432;
+  border-radius: 8px;
+  height: 200px;
+  flex-basis: calc(25% - 10px);
+  display: flex;
+  row-gap: 1px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.btnCreateGame {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  height: 35px;
+  font-family: 'Questrial', sans-serif;
+  font-size: 1.2em;
+  color: rgba(255, 255, 255, 0.9);
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(153, 0, 0, 0.9);
+}
+
+.btnCreateGame:hover {
+  cursor: pointer;
+}
+
+.btnCreateGame:active {
+  transform: translate(0.3px);
+}
+
+.btnCreateGame:disabled {
+  cursor: not-allowed;
+  transform: none;
+}
+
+.btnAddItems {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-family: 'Questrial', sans-serif;
+  color: rgba(255, 255, 255, 0.9);
+  font-size: 1.3em;
+  background-color: rgba(153, 0, 0, 0.9);
+  border: none;
+  border-radius: 7px;
+  height: 30px;
+  padding: 0 15px;
+}
+
+.btnAddItems:hover {
+  cursor: pointer;
+}
+
+.chooseSide {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 15%;
+  height: 50px;
+  gap: 10px;
+}
+
+.chooseSideImg {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.chooseSideImg:hover {
+  cursor: pointer;
+}
+
+.historyInfo {
+  font-size: 1.05em;
+  color: rgba(255, 255, 255, 0.8);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+.totalWorthHistory {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+
+}
+
+.gemHistory {
+  width: 15px;
+  height: 15px;
+}
 
 
 
