--- a/src/index.css
+++ b/src/index.css
@@ -244,6 +244,7 @@ code {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.3em;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
   color: #FFFFFF;
 }
 
@@ -252,6 +253,7 @@ code {
   height: 45px;
   background-color: #292a33;
   border-radius: 50%;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
   cursor: pointer;
 }
 
@@ -260,6 +262,7 @@ code {
   font-weight: 500;
   font-size: 1.2em;
   color: #FFFFFF;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.7);
   cursor: pointer;
 }
 
@@ -370,6 +373,7 @@ code {
 .logTitle {
   font-family: 'Raleway', sans-serif;
   color: #D4D4D4;
+  text-shadow: -1px 1px 3px rgba(255, 255, 255, 0.9);
   font-size: 1.3rem;
 }
 
@@ -377,8 +381,10 @@ code {
   width: 100%;
   height: 40px;
   margin-top: 20px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1.2rem;
+  text-shadow: -1px 1px 1px rgba(29, 30, 66, 0.4);
+  color: rgba(29, 30, 66, 1);
   border: solid 2px #CCC;
   border-radius: 15px;
   padding-left: 10px;
@@ -432,6 +438,7 @@ code {
 
 .custom-checkbox.checked::after {
   opacity: 1;
+  box-shadow: 0 0 3px rgba(255, 45, 45, 1);
   visibility: visible;
   transition: opacity 0.3s, visibility 0s;
 }
@@ -439,6 +446,7 @@ code {
 .agreement {
   color: #D4D4D4;
   font-size: 1rem;
+  text-shadow: -1px 1px 1px rgba(255, 255, 255, 0.3);
   margin-bottom: 10px;
 }
 
@@ -483,6 +491,9 @@ code {
 
 .btnLogin {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 50px;
   margin-top: 20px;
   font-family: 'Raleway', sans-serif;
@@ -492,6 +503,7 @@ code {
   border: none;
   border-radius: 0 7px 7px 7px;
   cursor: pointer;
+  transition: background-color 0.1s ease-in;
 }
 
 .btnLogin:hover {
@@ -1440,6 +1452,7 @@ code {
   text-align: left;
   line-height: 15px;
   width: 100px;
+  transition: background-color 0.1s ease-in;
 }
 
 .underOptions:hover {
@@ -1953,6 +1966,7 @@ code {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  flex-wrap: wrap;
   height: fit-content;
   width: 60%;
   min-width: 290px;
@@ -1960,11 +1974,9 @@ code {
   background-color: #212C3B;
   border-radius: 10px;
   padding: 15px 2%;
-  box-sizing: border-box;
   overflow-y: auto;
   overflow-x: hidden;
   row-gap: 10px;
-  max-height: 500px;
   animation: opacityFade 0.3s;
   transform: translateY(-20px);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
@@ -2304,7 +2316,6 @@ code {
   position: relative;
   width: 150px;
   height: 150px;
-  cursor: pointer;
   transition: transform 1s ease-in;
   transform-style: preserve-3d;
 }
@@ -2365,11 +2376,11 @@ code {
   transform: rotateY(-180deg);
 }
 
-#coin-container.heads {
+#coin-container.black {
   animation: flipHeads 3s ease-out forwards;
 }
 
-#coin-container.tails {
+#coin-container.red {
   animation: flipTails 3s ease-out forwards;
 }
 
@@ -2444,6 +2455,7 @@ code {
   height: 55px;
   border: solid 2px #6B7280;
   border-radius: 50%;
+  box-shadow: 0 0 5px #6B7280;
 }
 
 .innerData {
@@ -2651,7 +2663,8 @@ code {
   font-weight: 500;
   font-size: 1.05em;
   color: #FFFFFF;
-  gap: 9px;
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.7);
+  gap: 5px;
 }
 
 .marketUpperPanel {
@@ -3080,6 +3093,7 @@ code {
   font-family: 'Righteous', sans-serif;
   font-size: 1.4em;
   color: #FFFFFF;
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.8);
 }
 
 .streamNotification {
@@ -4477,6 +4491,105 @@ input[type="range"]::-webkit-slider-thumb {
   gap: 8px;
   flex-wrap: nowrap;
 }
+
+.btnCheckResultContainer {
+  display: flex;
+  flex-basis: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  transition: visibility 5s ease-in;
+}
+
+.btnCheckResult {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  color: rgba(255, 255, 255, 0.9);
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(255, 45, 45, 1);
+  height: 30px;
+  width: 130px;
+  transition: width 0.1s ease-in, opacity 0.3s ease-in;
+}
+
+.btnCheckResult:hover {
+  cursor: pointer;
+  background-color: rgba(255, 30, 30, 1);
+  width: 140px;
+  box-shadow: 0 0 5px rgba(255, 30, 30, 1);
+}
+
+.btnCheckResult:active {
+  background-color: rgba(255, 60, 60, 1);
+  transform: translate(0.3px);
+}
+
+.tosContainer {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.85em;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: #212C3B;
+  border-radius: 10px;
+  justify-content: center;
+  gap: 0;
+  height: 80vh;
+  margin-top: 14vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 5px;
+  transition: width 0.2s ease-in, margin-left 0.2s ease-in;
+}
+
+.tosContainer::-webkit-scrollbar {
+  width: 4px;
+}
+
+.tosContainer::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.tosContainer::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.tosContainer::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.linkElement {
+  font-weight: 700;
+  color: rgba(66, 98, 140, 1);
+  transition: color 0.1s ease-in;
+}
+
+.linkElement:hover {
+  cursor: pointer;
+  color: rgba(41, 62, 89, 1);
+}
+
+.tosLabelLogin {
+  color: rgba(255, 5, 5, 1);
+  text-shadow: -1px 1px 1px rgba(255, 5, 5, 0.8);
+  transition: color 0.1s ease-in;
+}
+
+.tosLabelLogin:hover {
+  cursor: pointer;
+  color: rgba(255, 100, 100, 1);
+}
+
 
 
 
