--- a/src/index.css
+++ b/src/index.css
@@ -4590,6 +4590,99 @@ input[type="range"]::-webkit-slider-thumb {
   color: rgba(255, 100, 100, 1);
 }
 
+.connectModalUpperText {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.2em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.7);
+}
+
+.connectModalBotsText {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  color: rgba(255, 255, 255, 0.55);
+  text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
+}
+
+.botsConnectContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  width: 85%;
+  flex-basis: 70%;
+}
+
+.botContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 95%;
+  height: 50px;
+  border-radius: 5px;
+  border: solid 2px rgba(255, 255, 255, 0.4);
+  box-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+  padding: 0 0 0 5px;
+}
+
+.botAvatar {
+  width: 42px;
+  height: 42px;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+}
+
+.botUsername {
+  flex-basis: 65%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.75);
+  text-shadow: -1px 1px 3px rgba(255, 255, 255, 0.5);
+}
+
+.botStatus {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+}
+
+.btnBotConnect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  background-color: rgba(255, 45, 45, 1);
+  font-size: 1.05em;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.9);
+  transition: width 0.1s ease-in, background-color 0.1s ease-in;
+  height: 100%;
+  width: 17%;
+  flex-basis: 20%;
+}
+
+.btnBotConnect:hover {
+  cursor: pointer;
+  width: 20%;
+  background-color: rgba(255, 70, 70, 1);
+  box-shadow: 0 0 3px rgba(255, 45, 45, 1);
+}
+
+.btnBotConnect:active {
+  transform: translate(0.3px);
+  background-color: rgba(255, 30, 30, 1);
+}
+
 
 
 
