--- a/src/index.css
+++ b/src/index.css
@@ -253,7 +253,6 @@ code {
   height: 45px;
   background-color: #292a33;
   border-radius: 50%;
-  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
   cursor: pointer;
 }
 
@@ -788,14 +787,18 @@ code {
   font-weight: 500;
   color: #9CA3AF;
   z-index: 2;
+  width: 35%;
+  transition: width 0.1s ease-in;
 }
 
 .claimBtn:hover {
   cursor: pointer;
+  width: 40%;
+  box-shadow: 0 0 3px #283242;
 }
 
 .claimBtn:active {
-  transform: translateY(0.5px);
+  transform: translateY(0.3px);
 }
 
 .closePanel {
@@ -1169,7 +1172,6 @@ code {
   font-size: 1em;
   row-gap: 20%;
   color: #FFFFFF40;
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.4);
   justify-content: flex-start;
 }
 
@@ -1185,13 +1187,12 @@ code {
 
 .betAmount {
   font-family: 'Sora', sans-serif;
-  color: #FFFFFFB2;
+  color: rgba(255, 255, 255, 0.85);
   font-size: 1.1em;
   font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.7);
   gap: 3px;
 }
 
@@ -1200,7 +1201,6 @@ code {
   font-weight: 400;
   font-size: 0.95em;
   color: #FFFFFF40;
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1291,7 +1291,7 @@ code {
   margin-left: -0.5rem;
   width: 100%;
   color: rgba(255, 255, 255, 0.9);
-  text-shadow: -2px 1px 8px rgba(255, 255, 255, 0.5);
+  text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
 }
 
 .itemCircle {
@@ -1323,7 +1323,6 @@ code {
   font-size: 1.3em;
   margin-left: 1.5rem;
   color: #FFFFFF4D;
-  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.4);
   flex-basis: 25%;
 }
 
@@ -1402,10 +1401,17 @@ code {
   gap: 10px;
   row-gap: 35px;
   background-color: #111827;
-  margin-left: 17.5%;
-  width: 65%;
   height: 40%;
   bottom: -45%;
+  transition: width 0.25s ease-in, margin-left 0.25s ease-in;
+  z-index: -1;
+}
+
+@media(max-width: 768px) {
+  .faq {
+    width: 95%;
+    margin-left: 2.5%;
+  }
 }
 
 .logoContainer {
@@ -2469,9 +2475,8 @@ code {
 
 .usernameProfile {
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 1.25em;
-  text-shadow: 0 2px 9px rgba(255, 255, 255, 1);
   color: #FFFFFF;
 }
 
@@ -2515,7 +2520,7 @@ code {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 1.55em;
-  text-shadow: 0 2px 9px rgba(255, 255, 255, 0.4);
+  text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.4);
   color: #FFFFFF;
 }
 
@@ -2793,7 +2798,7 @@ code {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 1.3em;
-  text-shadow: 0 2px 10px rgba(255, 255, 255, 0.4);
+  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.4);
   color: #FFFFFF;
 }
 
@@ -3208,7 +3213,7 @@ code {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 3px;
+  padding: 5px;
   width: 100%;
   min-height: 85px;
   border-radius: 5px;
@@ -3224,6 +3229,7 @@ code {
   width: 55px;
   height: 55px;
   border: solid 1px rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
 
 /*.leaderUsername {*/
@@ -3255,7 +3261,6 @@ code {
 .totalUpper {
   font-size: 0.8em;
   color: rgba(255, 255, 255, 0.3);
-  text-shadow: 0 1px 7px rgba(255, 255, 255, 0.5);
 }
 
 .addItems {
@@ -3384,15 +3389,25 @@ code {
   font-family: 'Questrial', sans-serif;
   color: rgba(255, 255, 255, 0.9);
   font-size: 1.3em;
-  background-color: rgba(153, 0, 0, 0.9);
+  background-color: rgba(153, 0, 0, 1);
   border: none;
   border-radius: 7px;
   height: 30px;
   padding: 0 15px;
+  width: 25%;
+  transition: width 0.1s ease-in, background-color 0.1s ease-in;
 }
 
 .btnAddItems:hover {
   cursor: pointer;
+  width: 25.5%;
+  box-shadow: 0 0 5px rgba(255, 45, 45, 1);
+  background-color: rgba(145, 0, 0, 1);
+  text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.4);
+}
+
+.btnAddItems:active {
+  background-color: rgba(153, 20, 20, 1);
 }
 
 .beneathCreate {
@@ -3476,6 +3491,7 @@ code {
   font-weight: 700;
   font-size: 2em;
   color: rgba(255, 255, 255, 0.95);
+  text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.4);
 }
 
 .supportSpace {
@@ -3489,6 +3505,12 @@ code {
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   resize: none;
+  box-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+}
+
+.supportSpace:focus {
+  outline: none;
+  box-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
 }
 
 .supportSpace::-webkit-scrollbar {
@@ -3530,11 +3552,14 @@ code {
   background-color: #b30000;
   width: 200px;
   height: 30px;
+  transition: width 0.1s ease-in;
 }
 
 .supportBtn:hover {
   cursor: pointer;
   background-color: #9e0000;
+  width: 210px;
+  box-shadow: 0 0 5px #9e0000;
 }
 
 .supportBtn:active {
@@ -4595,7 +4620,6 @@ input[type="range"]::-webkit-slider-thumb {
   font-size: 1.2em;
   font-weight: 500;
   color: rgba(255, 255, 255, 0.9);
-  text-shadow: 1px 1px 4px rgba(255, 255, 255, 0.7);
 }
 
 .connectModalBotsText {
@@ -4603,7 +4627,7 @@ input[type="range"]::-webkit-slider-thumb {
   font-weight: 500;
   font-size: 1em;
   color: rgba(255, 255, 255, 0.55);
-  text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
+
 }
 
 .botsConnectContainer {
@@ -4645,6 +4669,9 @@ input[type="range"]::-webkit-slider-thumb {
   font-weight: 500;
   color: rgba(255, 255, 255, 0.75);
   text-shadow: -1px 1px 3px rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  gap: 7px;
 }
 
 .botStatus {
@@ -4652,6 +4679,12 @@ input[type="range"]::-webkit-slider-thumb {
   height: 12px;
   border-radius: 50%;
   border: none;
+}
+
+.botCheckIcon {
+  color: rgba(255, 255, 255, 1);
+  font-size: 1.2em;
+  border-radius: 50%;
 }
 
 .btnBotConnect {
@@ -4683,6 +4716,35 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: rgba(255, 30, 30, 1);
 }
 
+.connectModalLowerText {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+  color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.banPage {
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow-y: auto;
+}
+
+.bannedMessage {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.5em;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.95);
+  text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.7);
+}
 
 
 
