--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,22 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #111827;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
 @keyframes arrowRotate {
   0% {
     transform: rotate(0);
@@ -968,7 +984,7 @@ code {
   width: 150px;
   top: 100%;
   border-radius: 5px;
-  background-color: #00000099;
+  background-color: rgba(0, 0, 0, 0.85);
   animation: fadeIn 0.3s;
   cursor: default;
 }
@@ -994,6 +1010,7 @@ code {
   text-align: center;
   right: 26.8%;
   z-index: 1;
+  transition: background-color 0.1s ease-in;
 }
 
 .paramSort:hover {
@@ -2319,9 +2336,12 @@ code {
 }
 
 #coin-container {
-  position: relative;
-  width: 150px;
-  height: 150px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, 0);
+  width: 350px;
+  height: 200px;
   transition: transform 1s ease-in;
   transform-style: preserve-3d;
 }
@@ -2357,7 +2377,6 @@ code {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  /*box-shadow: inset 0 0 45px rgba(255, 255, 255, 0.3), 0 12px 20px -10px rgba(0, 0, 0, 0.4);*/
 }
 
 @media (max-width: 768px) {
@@ -2367,37 +2386,9 @@ code {
 }
 
 .side-a {
-  background-image: url("./imgs/tails.png");
   background-size: cover;
   height: 100%;
   width: 100%;
-  z-index: 100;
-}
-
-.side-b {
-  background-image: url("./imgs/heads.png");
-  background-size: cover;
-  height: 100%;
-  width: 100%;
-  transform: rotateY(-180deg);
-}
-
-#coin-container.black {
-  animation: flipHeads 3s ease-out forwards;
-}
-
-#coin-container.red {
-  animation: flipTails 3s ease-out forwards;
-}
-
-@keyframes flipHeads {
-  from { transform: rotateY(0); }
-  to { transform: rotateY(1800deg); }
-}
-
-@keyframes flipTails {
-  from { transform: rotateY(0); }
-  to { transform: rotateY(1980deg); }
 }
 
 .profilePage {
@@ -2739,6 +2730,10 @@ code {
   transform: translate(0.5px);
 }
 
+.btnBuy:disabled {
+  cursor: not-allowed;
+}
+
 .affiliateInfo {
   display: flex;
   flex-direction: column;
@@ -3071,6 +3066,14 @@ code {
   background-color: #1b2430;
   top: 70%;
   left: 70%;
+}
+
+.profileUsername {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 7px;
 }
 
 .profileInfoPlayer {
@@ -3410,6 +3413,10 @@ code {
   background-color: rgba(153, 20, 20, 1);
 }
 
+.btnAddItems:disabled {
+  cursor: not-allowed;
+}
+
 .beneathCreate {
   display: flex;
   flex-direction: row;
@@ -3492,6 +3499,14 @@ code {
   font-size: 2em;
   color: rgba(255, 255, 255, 0.95);
   text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.4);
+}
+
+.notAuthorizedText {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 1.3em;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
 }
 
 .supportSpace {
@@ -4744,6 +4759,23 @@ input[type="range"]::-webkit-slider-thumb {
   font-weight: 700;
   color: rgba(255, 255, 255, 0.95);
   text-shadow: -1px 1px 4px rgba(255, 255, 255, 0.7);
+}
+
+.errorWindow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.4em;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+  border: none;
+  border-radius: 8px;
+  background-color: #192432;
+  animation: fadeIn 0.15s ease-in;
+  transition: opacity 0.1s ease-in, width 0.1s ease-in, height 0.1s ease-in;
+  height: 30%;
+  width: 37%;
 }
 
 
