--- a/src/index.css
+++ b/src/index.css
@@ -1599,6 +1599,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .chatUpperPanel {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -2962,7 +2963,7 @@ body::-webkit-scrollbar-thumb:hover {
   height: 150px;
   border: solid 1px #940000;
   border-radius: 50%;
-  padding: 3px;
+  padding: 5px;
   box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.5);
 }
 
@@ -3060,7 +3061,7 @@ body::-webkit-scrollbar-thumb:hover {
   width: 1.1em;
   height: 1.1em;
   color: #FFFFFF;
-  padding: 2px;
+  padding: 3px;
   border: solid 1px #FFFFFF;
   border-radius: 50%;
   background-color: #1b2430;
@@ -3290,6 +3291,27 @@ body::-webkit-scrollbar-thumb:hover {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   color: rgba(255, 255, 255, 0.95);
+}
+
+.approximateJoin {
+  position: absolute;
+  top: 3px;
+  right: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.85);
+  gap: 3px;
+}
+
+.approximatePartly {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
 
 .itemsAddContainer {
@@ -4199,6 +4221,7 @@ body::-webkit-scrollbar-thumb:hover {
   font-weight: 700;
   font-size: 1.7em;
   color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
 }
 
 .btnAdminDone {
@@ -4776,6 +4799,312 @@ input[type="range"]::-webkit-slider-thumb {
   transition: opacity 0.1s ease-in, width 0.1s ease-in, height 0.1s ease-in;
   height: 30%;
   width: 37%;
+}
+
+.modalWindowMain {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #192432;
+  padding: 10px;
+  width: 70%;
+  height: 75%;
+  animation: fadeIn 0.15s ease-in;
+  transition: width 0.1s ease-in, height 0.1s ease-in;
+}
+
+.inventoryContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px;
+  row-gap: 8px;
+  gap: 8px;
+  flex-wrap: wrap;
+  width: 90%;
+  height: 80%;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+  background-color: #2b394d;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.inventoryContainer::-webkit-scrollbar {
+  width: 4px;
+}
+
+.inventoryContainer::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.inventoryContainer::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.inventoryContainer::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.inventoryItemContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  background-color: #192432;
+  width: calc(25% - 10px);
+  height: 55%;
+  gap: 5px;
+  transition: background-color 0.15s ease-in, width 0.15s ease-in, height 0.15s ease-in, outline-width 0.1s ease-in;
+}
+
+.chosenItem {
+  background-color: #223245;
+}
+
+.inventoryItemContainer:hover {
+  cursor: pointer;
+  background-color: #223245;
+  width: calc(25.5% - 10px);
+  height: 56%;
+}
+
+.inventoryItemContainer:active {
+  transform: translateY(0.5px);
+}
+
+.imgItemContainer {
+  width: 55%;
+  height: 60%;
+}
+
+.nameItemContainer {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+}
+
+.rarityItemContainer {
+  font-family: 'Questrial', sans-serif;
+  font-size: 0.8em;
+}
+
+.priceItemContainer {
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+  align-items: center;
+  gap: 3px;
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.giveawayChosenTotalValue {
+  position: absolute;
+  display: flex;
+  gap: 3px;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+  top: 3%;
+  left: 5%;
+}
+
+.giveawayChosenAmount {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 1.1em;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+  top: 3%;
+  right: 5%;
+}
+
+.timersContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+  height: 30px;
+  width: calc(90% + 20px);
+  border: none;
+  flex-wrap: wrap;
+}
+
+.chooseTimer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+  background-color: #2b394d;
+  box-shadow: 0 0 5px #2b394d;
+  border-radius: 4px;
+  transition: width 0.15s ease-in, height 0.15s ease-in, background-color 0.15s ease-in, outline-width 0.15s ease-in;
+  width: 15%;
+  height: 90%;
+}
+
+.chooseTimer:hover {
+  cursor: pointer;
+  width: 17%;
+  height: 95%;
+}
+
+.chooseTimer:active {
+  transform: translateY(0.5px);
+}
+
+.chosenTimer {
+  background-color: #192432;
+  outline: solid 2px rgba(255, 255, 255, 0.75);
+  box-shadow: 0 0 7px rgba(255, 255, 255, 0.5);
+}
+
+.giveawayContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 180px;
+  width: 90%;
+  align-self: center;
+  padding: 5px;
+  gap: 8px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.65);
+  background-color: #192432;
+}
+
+.giveawayListHorizontal {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  width: 95%;
+  height: 50%;
+  overflow-y: hidden;
+  overflow-x: auto;
+  border: solid 1px rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  padding: 3px;
+}
+
+.giveawayListHorizontal::-webkit-scrollbar {
+  height: 7px;
+}
+
+.giveawayListHorizontal::-webkit-scrollbar-thumb {
+  background-color: #3b4963;
+  border-radius: 6px;
+}
+
+.giveawayListHorizontal::-webkit-scrollbar-track {
+  background-color: #111827;
+  border-radius: 6px;
+}
+
+.giveawayListHorizontal::-webkit-scrollbar-thumb:hover {
+  background-color: #334057;
+}
+
+.horizontalItemContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 45%;
+  max-width: 45%;
+  min-height: 95%;
+  border-radius: 5px;
+  border: solid 1px rgba(255, 255, 255, 0.5);
+}
+
+.imgHorizontalItem {
+  width: 75%;
+  height: 95%;
+}
+
+.totalValueGiveaway {
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+}
+
+.btnParticipate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  color: rgba(255, 255, 255, 0.9);
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(255, 45, 45, 1);
+  transition: width 0.15s ease-in, background-color 0.15s ease-in;
+  width: 70%;
+  height: 23px;
+  box-shadow: 0 0 5px rgba(255, 45, 45, 0.8);
+}
+
+.btnParticipate:hover {
+  cursor: pointer;
+  width: 80%;
+  background-color: rgba(255, 15, 15, 1);
+}
+
+.btnParticipate:active {
+  background-color: rgba(255, 60, 60, 1);
+  transform: translateY(0.5px);
+}
+
+.giveawayUpperPanel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 95%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.85);
+  text-shadow: 0 0 3px rgba(255, 255, 255, 0.4);
+  flex-wrap: nowrap;
 }
 
 
