--- a/src/index.css
+++ b/src/index.css
@@ -716,11 +716,11 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   align-items: center;
   align-self: flex-end;
-  padding: 0 10px;
+  padding: 5px 10px;
   width: fit-content;
   background-color: #212C3B;
   height: 100px;
-  row-gap: 10px;
+  gap: 10px;
   border-radius: 5px;
   animation: dropDown 0.2s;
   list-style-type: none;
@@ -733,6 +733,13 @@ body::-webkit-scrollbar-thumb:hover {
   font-family: 'Raleway', sans-serif;
   font-size: 1em;
   line-height: 1em;
+  color: rgba(255, 255, 255, 0.8);
+  transition: color 0.15s ease-in;
+}
+
+.gamesTitle:hover {
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.95);
 }
 
 .titleContainer {
@@ -2151,6 +2158,20 @@ body::-webkit-scrollbar-thumb:hover {
   justify-content: center;
   align-items: center;
   gap: 3px;
+}
+
+.countdownContainer {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.countdownText {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  font-size: 2.8em;
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.4);
 }
 
 @media (max-width: 1200px) {
